[tool.poetry]
name = "nonebot_plugin_horserace"
version = "2.1"
description = "horserace"
authors = ["Shinian <2581846402@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
nonebot-plugin-horserace = "2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
