[tool.poetry]
name = "nonebot_plugin_horserace"
version = "2.2"
description = "horserace"
authors = ["shinian <2581846402@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nonebot-adapter-onebot = "^2.1.1"
nonebot2 = "^2.0.0-beta.4"
nonebot-plugin-imageutils = "^0.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
